// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="sc-AxjAm gLlDfb"
  >
    <img
      alt=""
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxjAm dxeZJh"
  >
    <div
      data-radium={true}
    >
      <div
        className="sc-AxjAm hmwaKW"
      >
        <h1
          className="sc-AxirZ dbrwuw"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      
    </div>
  </div>
  <div
    className="sc-AxjAm kmIuYE"
  >
    <button
      className="k-Button k-Button--helium"
      href={null}
      onClick={null}
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="sc-AxjAm gLlDfb"
  >
    <img
      alt="Image alt"
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxjAm dxeZJh"
  >
    <div
      data-radium={true}
    >
      <div
        className="sc-AxjAm fKOaOg"
      >
        <h1
          className="sc-AxirZ dbrwuw"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      <div
        className="sc-AxjAm dxQDWs"
      >
        <p
          className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom text
        </p>
      </div>
    </div>
  </div>
  <div
    className="sc-AxjAm kmIuYE"
  >
    <button
      className="k-Button k-Button--helium"
      href={null}
      onClick={null}
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
